structure with stuff

--- a/paper.tex
+++ b/paper.tex
@@ -124,20 +124,38 @@ such that:
 
 The constant $\alpha_i\in\mathbb{R}_{\geq0}$ is simply a weighting statistic for the relative importance of travel distances to the other factors (once again allowing for this coefficient to be dependent on population partitioning).
 
-In \cite{} various theoretical results are proven.
+In \cite{} various theoretical results are proven. With regards to the effect of worth of service on the PoA but also with regards to demand. The profile of Figure \ref{fig:poaprofile} is shown to hold in general.
+
+\begin{figure}[!hbtp]
+Pic
+\end{figure}
+
+To consider systems where individuals are able to observe the system there are two approaches: the first is to use a simulation based approach that allows individuals to choose their most desirable queue.
+One such approach that was considered specifically in the context of healthcare was considered in \cite{}.
+
+Given that individuals will consider a simple selfish decision rule this approach is relatively straightforward and can also be considered using straightforward analytical Markov models.
+The difficulty with this approach is appears when attempting to obtain the PoA.
+To carry this out an optimal policy must be obtained.
+
+In \cite{} various dynamic programming and approximate dynamic programming techniques are proposed that are able to not only give an optimal policy but also prove the following observation:
+
+\begin{center}
+\textit{Selfish users make busier systems.}
+\end{center}
+
+In the next section selfish congestion related decisions by managers will be considered.
 
 \section{CCU Work}
 
-\begin{itemize}
-    \item IK Paper
-\end{itemize}
+Talk about idea.
+Talk about Markov model.
+Talk about proof that pure strategy NE exists.
+Show how can be used to influence t.
 
 \section{EU and EMV Interface}
 
-\begin{itemize}
-    \item Describe model;
-    \item Show some results.
-\end{itemize}
+Describe simple Markov model for hospital.
+Describe routing game model for thing.
 
 \section{Conclusions}
 
@@ -161,5 +179,3 @@ In \cite{} various theoretical results are proven.
 32, 5-44.
 
 \end{document}
-
-
