--- a/paper.tex
+++ b/paper.tex
@@ -59,11 +59,14 @@
 \vspace{8mm}
 
 \begin{abstract}
-It is well observed that individual behaviour can have an effect on the efficiency of queueing systems.
-The impact of this behaviour on the economic efficiency of public services is considered in this paper where we present results concerning the congestion related implications of decisions made by individuals when choosing between facilities.
-The work presented has important managerial implications at a public policy level when considering the effect of allowing individuals to choose between providers.
-We show that in general the introduction of choice in an already inefficient system will not have a negative effect.
-Introducing choice in a system that copes with demand will have a negative effect.
+Individual behaviour has an effect on the optimal control of queueing systems.
+This idea sits at the intersection of queueing theory and game theory.
+The role of this paper is to discuss some work in this area applied to healthcare systems.
+
+One aspect considered is the effect of patient behaviour when choosing between service facilities.
+Various pieces of work will be discussed that have looked at this area.
+
+A second aspect is the effect that managers may have when acting rationally in their control of queueing systems.
 \end{abstract}
 
 \bigskip
