--- a/paper.tex
+++ b/paper.tex
@@ -3,8 +3,10 @@
 \usepackage[brazil]{babel}
 \usepackage[latin1]{inputenc}
 \usepackage{amsmath,amssymb}
+\usepackage{booktabs}
 
 \usepackage{tikz}
+
 \usetikzlibrary{calc}
 \usetikzlibrary{shapes}
 \usetikzlibrary{arrows}
@@ -97,6 +99,7 @@ The degree of central control that should be exercised is a very important quest
 What is the effect of allowing individuals to choose service provider?
 
 This is a question that is answered using the Game theoretical concept referred to as the \textit{Price of Anarchy} (PoA).
+This was first defined in \cite{Koutsoupias2009} but an excellent introduction is given in \cite{Roughgarden2005}.
 The PoA is defined as the ratio of the selfish utility to the optimal utility.
 
 Section \label{sec:choosingqueues} will discuss some PoA analysis applied to individuals choosing between queues.
@@ -107,6 +110,7 @@ Section \label{sec:conclusion} will conclude with a summary and thoughts for fur
 
 This section describes how patient choices between various congestion affected services may be modelled.
 In particular the situation shown diagrammatically in Figure \ref{fig:choices} is considered: patients have a choice amongst $M/M/c$ queues.
+Each $M/M/c$ queue corresponds to a (simple) model of a Hospital (or indeed any other public service facility).
 
 \begin{figure}[!hbtp]
 \begin{center}
@@ -115,10 +119,31 @@ In particular the situation shown diagrammatically in Figure \ref{fig:choices} i
 \caption{Routing patients from $m$ hospitals to $n$ services.}\label{fig:choices}
 \end{figure}
 
-There are two approaches to solving this problem: assuming that patients observe or not the system states before choosing a facility.
-A rigorous comparison of these two approaches for individuals choosing to join an $M/M/1$ queue is given in \cite{}.
+The parameters of this system are shown in Table \ref{tab:parameters}.
 
-An unobservable study is given in \cite{} where routing games \cite{Rouhgharden} are used to study the system described.
+\begin{figure}[!hbtp]
+\begin{center}
+\begin{tabular}{cl}
+\toprule
+Parameter & Interpretation\\
+\midrule
+$m\in\mathbb{Z}$& Number of sources\\
+$n\in\mathbb{Z}$& Number of service centers\\
+$\beta\in\mathbb{R}_{\geq 0}^{m}$& Worth of service\\
+$\Lambda\in\mathbb{R}_{\geq 0}^{m}$& Demand rate\\
+$w_j$ for $j\in[n]$& A convex utility function\\
+$d_{ij}$ for $i\in[m],\;j\in[n]$& Distance from source $i$ to service center $j$\\
+$\lambda_{ij}$ for $i\in[m],\;j\in[n]$& Traffic from source $i$ to service center $j$\\
+\toprule
+\end{tabular}
+\caption{Parameters of model}\label{tab:parameters}
+\end{center}
+\end{figure}
+
+There are two approaches to solving this problem: assuming that patients observe or not the system states before choosing a facility.
+A rigorous comparison of these two approaches for individuals choosing to join an $M/M/1$ queue is given in \cite{shone2013comparisons}.
+
+An unobservable study is given in \cite{Knight2013} where routing games \cite{Roughgarden2005} are used to study the system described.
 The routing game used is shown in \ref{fig:routinggame}.
 
 \begin{figure}[!hbtp]
@@ -128,13 +153,14 @@ The routing game used is shown in \ref{fig:routinggame}.
 \caption{Routing game $m$ hospitals to $n$ services.}\label{fig:routinggame}
 \end{figure}
 
-It can be shown that the cost for any given flow $\lambda$ (denoting the amount of traffic from source $i$ to facility $j$) corresponds to...
+The corresponding cost function for a given traffic flow $\lambda$ is given by:
 
 \begin{equation}
 C(\lambda)=\sum_{i=1}^m\alpha_i\sum_{j}^nd_{ij}\lambda_{ij}+\sum_{j=1}^n\sum_{i=1}^m\lambda_{ij}w_j\left(\sum_{i=1}^m\lambda_{ij}\right)+\sum_{i=1}^m\beta_i\left(\Lambda_i-\sum_{j=1}^n\lambda_{ij}\right)
 \label{C}\end{equation}
 
-Obtaining the Nash flow: ie the equilibrium behaviour.
+The constant $\alpha_i\in\mathbb{R}_{\geq0}$ is simply a weighting statistic for the relative importance of travel distances to the other factors (once again allowing for this coefficient to be dependent on population partitioning).
+The Nash flow corresponding to the flow at which all traffic from a given source travels on minimal paths can be shown to be given by the flow that minimises the following function:
 
 \begin{equation}
 \Phi(\lambda)=\sum_{i=1}^m\alpha_i\sum_{j}^nd_{ij}\lambda_{ij}+\sum_{j=1}^n\int_0^{\sum_{i=1}^m\lambda_{ij}}w_j(x)dx+\sum_{i=1}^m\beta_i\left(\Lambda_i-\sum_{j=1}^n\lambda_{ij}\right)
@@ -156,10 +182,8 @@ such that:
 \sum_{i=1}^m\lambda_{ij}<c_j\mu_j\text{ for all }j\in[n]\label{constraint 3}
 \end{equation}
 
-
-The constant $\alpha_i\in\mathbb{R}_{\geq0}$ is simply a weighting statistic for the relative importance of travel distances to the other factors (once again allowing for this coefficient to be dependent on population partitioning).
-
-In \cite{} various theoretical results are proven. With regards to the effect of worth of service on the PoA but also with regards to demand. The profile of Figure \ref{fig:poaprofile} is shown to hold in general.
+In \cite{Knight2013} various theoretical results are proven with regards to the effect of worth of service on the PoA but also with regards to demand.
+The profile of Figure \ref{fig:poaprofile} is shown to hold in general.
 
 \begin{figure}[!hbtp]
 \begin{center}
@@ -168,14 +192,16 @@ In \cite{} various theoretical results are proven. With regards to the effect of
 \caption{General profile of PoA.}\label{fig:poaprofile}
 \end{figure}
 
+Further to the theoretical consideration the PoA was calculated for a large case study using Hospital in Wales offering knee surgeries.
+A high PoA was calculated for the current demand.
+
 To consider systems where individuals are able to observe the system there are two approaches: the first is to use a simulation based approach that allows individuals to choose their most desirable queue.
-One such approach that was considered specifically in the context of healthcare was considered in \cite{}.
+One such approach that was considered specifically in the context of healthcare was considered in \cite{Knight2010}.
 
 Given that individuals will consider a simple selfish decision rule this approach is relatively straightforward and can also be considered using straightforward analytical Markov models.
 The difficulty with this approach is appears when attempting to obtain the PoA.
-To carry this out an optimal policy must be obtained.
 
-In \cite{} various dynamic programming and approximate dynamic programming techniques are proposed that are able to not only give an optimal policy but also prove the following observation:
+In \cite{Shone2014} various dynamic programming and approximate dynamic programming techniques are proposed that are able to not only give an optimal policy but also prove the following observation:
 
 \begin{center}
 \textit{Selfish users make busier systems.}
@@ -307,7 +333,7 @@ $\square$
 
 \newpage
 \bibliographystyle{plain}
-\bibliography{library.bib}
+\bibliography{library}
 
 %\bigskip
 %\noindent{\bf Refer\^encias}
