backslash has dissapeared

--- a/paper.tex
+++ b/paper.tex
@@ -211,6 +211,11 @@ In the next section selfish congestion related decisions by managers will be con
 
 \section{Managing queues}\label{sec:managingqueues}
 
+Following the analysis of two critical care units (CCUs) it was found that the only a state dependent queueing model (where the demand rate to each CCU depended on the state of the CCU) would give a valid representation of the system.
+Upon discussion with the managers in question, it was acknowledged that certain behaviours took place.
+Indeed when one CCU was at high capacity it was likely to divert patients to the other CCU.
+
+In ...
 The main proposition of the work requested by the ABUHB was to develop a mathematical model of bed occupancies at the CCUs at RG and NH.
 After an initial analysis of the data, behavioural aspects became apparent; for example, delaying patients discharge if there was no pressure on CCU beds, or admitting fewer patients if bed occupancy levels were high.
 As a result of this, a state-dependent queueing model has been developed, which includes the dependency of admission rate on actual occupancy \cite{Komenda2013}.
